Upgrade jdk
- --add-opens is enabled for test.

TODO:
2 tests failing